2007-03-06  Nicola Pero <nicola.pero@meta-innovation.com>

	* GNUmakefile (GNUSTEP_MAKEFILES): If not set, use gnustep-config
	to set it.  (GNUSTEP_INSTALLATION_DOMAIN): Removed.
	(RPM_DISABLE_RELOCATABLE): Removed.
	* SystemPreferences/GNUmakefile.preamble: Fixed
	ADDITIONAL_LIB_DIRS to work on MinGW (Problem reported by
	xavier.glattard@online.fr).
	* Modules/ColorSchemes/GNUmakefile.preamble: Same change.
	* Modules/Defaults/GNUmakefile.preamble: Same change.
	* Modules/Filesystem/GNUmakefile.preamble: Same change.
	* Modules/Fonts/GNUmakefile.preamble: Same change.
	* Modules/ModifierKeys/GNUmakefile.preamble: Same change.
	* Modules/Template/GNUmakefile.preamble: Same change.
	* Modules/Timezone/GNUmakefile.preamble: Same change.
	* Modules/Volumes/GNUmakefile.preamble: Same change.
	
2007-02-18  Nicola Pero <nicola.pero@meta-innovation.com>

	* Modules/ColorSchemes/GNUmakefile.postamble (after-install):
	Create the GNUSTEP_LIBRARY/Colors directory before installing into
	it.

2006-11-06  Riccardo Mottola <riccardo@kaffe.org>

	* GNUmakefile: added package name and version
	* Modules/ColorSchemes/GNUmakefile.postamble: added
	* Modules/ColorSchemes/PreviewView.m,
	Modules/ColorSchemes/PreviewView.h:
	refactored, cleaned and added Radio
	
	added some colorschemes.

2006-10-21  Riccardo Mottola <riccardo@kaffe.org>

	* Modules/ColorSchemes/PreviewView.m,
	Modules/ColorSchemes/PreviewView.h:
	some refactoring

2006-09-30  Enrico Sersale <enrico@fibernet.ro>

	* Modules/TimeZone/Resources/zones.db:
  Update to latest timezone info. 

2006-09-28  Enrico Sersale <enrico@fibernet.ro>

	* Modules/ColorSchemes/ColorSchemes.m: 
  Impemented -willUnselect.
  Avoid some compiler warning.

2006-09-26  Enrico Sersale <enrico.sersale@gmail.com>

	* Modules/Fonts/FontModule.m: impemented -willUnselect (by Ingolf Jandt <i.jandt@web.de>)

2006-09-25  Riccardo Mottola <riccardo@kaffe.org>
	* Modules/ColorSchemes/NSColorStringMethods.h:
	removed useless declaration